--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /.vs/TestGithub/FileContentIndex/00828350-e848-4617-91c1-108a29fb86cd.vsidx
 /.vs/TestGithub/FileContentIndex/04509907-e966-4cf2-9dc0-8a403ae4b30f.vsidx
 /.vs/TestGithub/FileContentIndex/48e9c6f8-e500-4dde-88ab-49eea21c1cb6.vsidx
+/KendoUITest/.vs
+/KendoUITest/KendoUI/bin/Debug/net6.0
+/KendoUITest/KendoUI/obj/Debug/net6.0
+/KendoUITest/WebApplication1/bin/Debug/net6.0
+/KendoUITest/WebApplication1/obj/Debug/net6.0
